[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/scaffold/src/gui/level_select/LevelSelectItemLockedHeader.gd" type="Script" id=1]
[ext_resource path="res://addons/scaffold/src/gui/level_select/LockAnimation.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/scaffold/assets/fonts/main_font_s.tres" type="DynamicFont" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.65098, 0.65098, 0.65098, 0.443137 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0784314, 0.0784314, 0.0784314, 0.894118 )

[node name="LevelSelectItemLockedHeader" type="PanelContainer"]
margin_right = 320.0
margin_bottom = 56.0
rect_min_size = Vector2( 400, 56 )
mouse_filter = 1
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LockAnimation" parent="." instance=ExtResource( 2 )]
margin_left = 200.0
margin_top = 28.0
margin_right = 200.0
margin_bottom = 28.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HintWrapper" type="PanelContainer" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 400.0
margin_bottom = 56.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 7
custom_styles/panel = SubResource( 2 )

[node name="Hint" type="Label" parent="HintWrapper"]
margin_left = 94.0
margin_right = 306.0
margin_bottom = 55.0
rect_min_size = Vector2( 212, 34 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "(Finish the previous level)"
align = 1
valign = 1
autowrap = true
[connection signal="gui_input" from="." to="." method="_on_LevelSelectItemLockedHeader_gui_input"]
[connection signal="unlock_finished" from="LockAnimation" to="." method="_on_LockAnimation_unlock_finished"]
